--- a/css/styles.css
+++ b/css/styles.css
@@ -27,8 +27,22 @@ ul {
 
 .container {
   width: 1158px;
-  padding: 0 15px;
+  padding: 0;
   margin: 0 auto;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 .section {
@@ -320,6 +334,7 @@ header {
   display: flex;
   justify-content: center;
   gap: 24px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-soc-item {
   width: 40px;
@@ -494,8 +509,20 @@ header {
   background-color: #31d0aa;
 }
 
-.footer-email {
+.footer-email-title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+  margin-bottom: 16px;
   margin-left: 80px;
+  display: flex;
+}
+
+.footer-sub {
+  margin-left: 80px;
+  display: flex;
 }
 
 .footer-input {
@@ -517,16 +544,15 @@ header {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
-  display: flex;
   align-items: center;
   text-align: center;
+  display: flex;
   letter-spacing: 0.04em;
   border: none;
   color: #ffffff;
   background: #4d5ae5;
   border-radius: 4px;
   cursor: pointer;
-  margin-left: 24px;
   max-height: 40px;
   padding: 8px 24px;
 }
@@ -658,10 +684,6 @@ header {
   overflow: hidden;
 }
 
-.link-port-cover {
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .link-port-cover:hover .overlay {
   transform: translateY(0);
 }
@@ -713,7 +735,6 @@ header {
   top: 50%;
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  background-color: #fcfcfc;
 }
 
 .backdrop.is-hidden .modal {
@@ -829,7 +850,6 @@ header {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
-  display: flex;
   text-align: center;
   letter-spacing: 0.04em;
   width: 169px;
@@ -839,12 +859,11 @@ header {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   cursor: pointer;
-  margin: auto;
   padding: 16px 32px;
   border: transparent;
-  flex-direction: row;
   align-items: flex-start;
-  margin-top: 24px;
+  margin: 24px 95px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-button:is(:hover, :focus) {
@@ -853,3 +872,60 @@ header {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
 }
+
+.check-text {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #757575;
+  display: flex;
+  gap: 8px;
+}
+
+.check-text span {
+  width: 16px;
+  height: 16px;
+  border-radius: 2px;
+  border: 1.25px solid #2e2f42;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-check:checked + .check-text span {
+  background-color: #404bbf;
+  border: 1.25px solid #404bbf;
+  border-radius: 2px;
+  fill: #f4f4fd;
+}
+
+.modal-check:focus + .check-text span {
+  background-color: #404bbf;
+  border: 1.25px solid #404bbf;
+  border-radius: 2px;
+  fill: #f4f4fd;
+}
+
+.privacy-link {
+  color: #4d5ae5;
+}
+
+/* .check-text::before {
+  content: "";
+  width: 16px;
+  height: 16px;
+  border-radius: 2px;
+  border: 1.25px solid #2e2f42;
+  display: block;
+}
+
+.modal-check:checked + .check-text::before {
+  background-color: #404bbf;
+  border: 1.25px solid #404bbf;
+  border-radius: 2px;
+  background-image: url(../images/check-box.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+} */ ;
